k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30527
